# mcp-trace-demo

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
crew_agent/: run_incident.py
mcp_server/: incident_server.py
otel/: __init__.py  setup.py
scripts/: demo.sh  jaeger_find_trace.sh  quick_trace_demo.sh  trace_smoke_test.py  verify_setup.sh
