[project]
name = "mcp-trace-demo"
version = "0.1.0"
description = "MCP + CrewAI + Ollama + OpenTelemetry tracing demo"
authors = [
    {name = "ekb-dev-ai", email = "ekb.dev.ai@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "mcp[cli]>=1.12.0",
    "crewai>=0.108.0",
    "crewai-tools[mcp]>=0.44.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
    "opentelemetry-instrumentation-crewai>=0.49.0",
    "logfire[httpx,litellm]>=3.0.0",
    "litellm>=1.60.0",
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
